# trading-agent

./: .env.paper.example  .gitignore  README.md  SYSTEM_DESIGN_v3.2.md  SYSTEM_DESIGN_v3.3.md  docker-compose.botdev.yml  docker-compose.devmount.yml  docker-compose.live.yml  docker-compose.llm.yml  docker-compose.mvp0.yml  docker-compose.paper.yml  pyproject.toml
agents/analysts/: bear_case.py  catalyst_hunter.py  news_analyst.py  verification.py
agents/collectors/: corporate_action.py  entity_resolver.py  news_collector.py  social_sentiment.py
agents/context/: liquidity.py  market_regime.py
agents/decision/: __init__.py  decision_engine.py  strategy_engine.py
agents/meta/: performance_attribution.py  post_mortem.py
agents/monitoring/: anomaly_detector.py  position_monitor.py  reconciliation.py  slippage_monitor.py  strategy_drift.py
agents/prompts/: news_analyst_v1.md
agents/ui/: conversational_control.py  daily_briefing.py
apps/api/: Dockerfile  __init__.py  main.py  state.py
apps/bot_telegram/: Dockerfile  __main__.py
brokers/: base.py  capabilities.py  kis_domestic_kr_live.py  kis_domestic_kr_mock.py  kis_overseas_live.py  kis_overseas_mock.py  kiwoom_rest_kr_base.py  kiwoom_rest_kr_live.py  kiwoom_rest_kr_mock.py  simulated.py  toss_invest_future.py
core/: __init__.py  bootstrap.py  clock.py  healthcheck.py  operating_mode.py  system_state.py  trading_controls.py
docs/: RUNBOOK.md  STRATEGY_AUTHORING_GUIDE.md
scripts/: backtest_ohlcv.py  daily_postmortem.py  monthly_drift_review.py  replay_day.py  weekly_attribution.py
tests/: conftest.py
(+90 files in other folders)
